
- Building the path to the R shared library was incorrectly
  using the output of `R CMD config LIBnn` (issue #982).

- R started raising warnings when calling `formals` on `SPECIALSXP` R objects.
  Internal functions :mod:`rpy.robjects.functions` calling `formals` no longer
  propagate the warnings.
  
- The :mod:`numpy` converter was not turning `NA_character_` into
  `None` (issue #979).


Release 3.5.8
=============

New features
------------

- Default value for the interactivity status of the embedded R
  as initialization is now a private variable
  `_DEFAULT_R_INTERACTIVE` in :mod:`rpy2.rinterface_lib.embedded`.

Bugs fixed
----------

- :func:`rpy2.rinterface.initr_checkenv` (aliased to
  :func:`rpy2.rinterface.initr`) did not include
  initialization parameters for `interactive`, `_want_setcallbacks`,
  and `_c_stack_limit` (issue #976).
  
- The numpy converter was not listing R objects of type `CHARSXP` as
  vectors. This make R `NA_character_` values wrapped in `rpy2` Python
  objects to be passed as-is (issue #983).


Release 3.5.7
=============

New features
------------

- :class:`rpy2.robjects.conversion.Converter` objects are now also context
  managers. This makes the use of :func:`rpy2.robjects.conversion.localconverter`
  unnecessary as a converter can now be used directly with a Python `with`
  statement. The documentation was updated accordingly.

Bugs fixed
----------

- Building the C-extension could fail when the C compiler is not
  C99-compatible or requires to be specified C99 compatibility
  (issue #963).

- With the "R magic", converters in a local namespace were inadvertently
  skipped (the local namespace was not searched).

- Calling :func:`rpy2.rinterface.rternalize` before the embedded R is
  initialized was ending with a segfault. It is now raising an
  :class:`rpy2.rinterface_lib/embedded/RNotReady` (issue #971).

Changes
-------

- The default for the :class:`contextvars.ContextVar` holding